fix: adjust line-height and spacing to recommended

--- a/src/components/Scheduler/Scheduler.module.scss
+++ b/src/components/Scheduler/Scheduler.module.scss
@@ -1,29 +1,42 @@
 @import '../../styles/colors';
+@import '../../styles/fonts';
 
 .scheduler {
   max-height: 380px;
 }
 
 .header {
-  padding: 0.875rem 0.875rem 0 0.875rem;
+  padding: 13px 0.875rem 0.75rem;
   border-bottom: 1px solid $grey;
 
   .date__top {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 0.5rem;
+    gap: 13px;
+    margin-bottom: 0.375rem;
 
     .date__value {
       font-size: 0.875rem;
+      line-height: 17px;
       font-weight: 500;
+      & > div {
+        display: inline-block;
+
+        &:nth-child(2) {
+          color: fade-out($black, 0.45);
+          margin-left: 4.4rem;
+        }
+      }
     }
 
     select {
       background: transparent;
       font-size: 0.875rem;
+      line-height: 1.25rem;
       border: none;
       outline: none;
+      font-family: $body-font-family;
     }
   }
 
@@ -31,32 +44,31 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    column-gap: 13px;
     overflow-x: auto;
 
     .date {
       font-size: 0.75rem;
-      color: fade-out($black, 0.55);
-      margin-bottom: 0.75rem;
+      color: fade-out($black, 0.45);
+      line-height: 0.875rem;
     }
     .active {
       color: $white;
       background: $primary;
       border-radius: 50%;
       padding: 0.125rem;
-      font-size: 0.625rem;
+      font-size: 9px;
+      line-height: 11px;
     }
   }
 }
 
 .content {
-  padding: 0.5rem;
+  padding: 0.8125rem 0 0.375rem;
   display: flex;
   flex-direction: column;
   align-self: flex-end;
   gap: 0.75rem;
-  overflow-y: auto;
-  height: 310px;
-  cursor: pointer;
   -ms-overflow-style: none;
   scrollbar-width: none;
 
@@ -65,10 +77,27 @@
   }
 
   & > div {
-    width: 75%;
+    position: relative;
 
-    &:nth-child(even) {
+    &:nth-child(1) {
+      width: 299px;
+      left: 7.875rem;
+    }
+    &:nth-child(2) {
       align-self: flex-end;
+      width: 560px;
+    }
+    &:nth-child(3) {
+      width: 399px;
+      left: 13.125rem;
+    }
+    &:nth-child(4) {
+      align-self: flex-end;
+      width: 781px;
+    }
+    &:nth-child(5) {
+      width: 199px;
+      left: 24rem;
     }
   }
 }
