--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,8 +1,9 @@
 @import '../../styles/colors';
+@import '../../styles/fonts';
 
 @mixin linkcontainer {
   display: block;
-  margin: 0.25rem 0;
+  margin: 0;
 }
 
 @mixin linkstyle {
@@ -10,11 +11,12 @@
   align-items: center;
   gap: 0.5rem;
   font-size: 0.8125rem;
+  line-height: 18px;
   font-weight: 500;
   color: $black;
   text-decoration: none;
   padding: 0.625rem 2rem 0.625rem 1.875rem;
-  border-radius: 0rem 0.625rem 0.625rem 0rem;
+  border-radius: 0 0.625rem 0.625rem 0;
   transition: all 0.3s ease;
 
   &:hover {
@@ -35,31 +37,36 @@
 .sidebar__container {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   height: inherit;
   width: inherit;
   background: $white;
-  padding: 1.875rem 1.875rem 0.625rem 0rem;
+  padding: 1.1875rem 1.875rem 0 0;
 }
 
 .sidebar__header {
   padding-left: 1.875rem;
 
   .workspace {
-    margin: 1.5rem 0;
+    margin: 1.75rem 0 2.3125rem;
+
 
     h3 {
       color: $primary;
       text-transform: uppercase;
       font-size: 0.75rem;
-      font-weight: 500;
-      margin-bottom: 0.5rem;
+      font-weight: 600;
+      margin-bottom: 7px;
+      line-height: 17px;
     }
 
     select {
       border: none;
       outline: none;
       background: transparent;
+      font-family: $body-font-family;
+      font-size: 0.75rem;
+      font-weight: 400;
+      line-height: 17px;
     }
   }
 }
