--- a/src/components/TeamCard/TeamCard.module.scss
+++ b/src/components/TeamCard/TeamCard.module.scss
@@ -6,7 +6,8 @@
 
 .card {
   display: flex;
-  gap: 0.625rem;
+  align-content: center;
+  gap: 0.5rem;
   width: 268px;
   border-radius: 0.625rem;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
@@ -42,19 +43,21 @@
 .avatar {
   border-radius: 50%;
   background: $grey;
-  margin: 0.625rem 0;
+  margin: 0.5rem 0;
 }
 
 .card_info {
-  padding: 0.625rem;
+  padding: 0.5rem 0;
+
   h5 {
     font-size: 0.625rem;
     font-weight: 500;
     margin-bottom: 0.25rem;
+    line-height: 0.75rem;
   }
 
   div {
     font-size: 0.5rem;
-    font-weight: 500;
+    line-height: 00.625rem;
   }
 }
